# repairbench-framework

./: .gitignore  evaluate_patches.py  generate_patches.py  generate_samples.py  pyproject.toml  run.sh  setup.sh
.github/workflows/: lint.yml  tests.yml
elleelleaime/core/benchmarks/: benchmark.py
elleelleaime/core/benchmarks/BugsInPy/: BugsInPy.py  BugsInPybug.py
elleelleaime/core/benchmarks/defects4j/: defects4jbug.py
elleelleaime/core/utils/java/: java.py
elleelleaime/core/utils/languages/: python_utils.py
elleelleaime/core/utils/python/: python.py
elleelleaime/evaluate/strategies/: registry.py
elleelleaime/evaluate/strategies/anthropic/: anthropic_python.py
elleelleaime/evaluate/strategies/google/: google_python.py
elleelleaime/evaluate/strategies/mistral/: mistral_python.py
elleelleaime/evaluate/strategies/openai/: openai_python.py
elleelleaime/evaluate/strategies/openrouter/: openrouter_python.py
elleelleaime/evaluate/strategies/text/: instruct_python.py  replace.py  replace_python.py
elleelleaime/generate/strategies/: registry.py
elleelleaime/generate/strategies/models/huggingface/repairllama/: repairllama_infilling.py
elleelleaime/sample/strategies/: infilling.py
tests/core/benchmarks/BugInPy/: test_BugsInPy.py
tests/evaluate/: test_evaluate_google.py  test_evaluate_instruct.py  test_evaluate_mistral.py  test_evaluate_openai.py  test_evaluate_openrouter.py  test_evaluate_replace.py
tests/sample/infilling/: test_codellama.py
tests/sample/instruct/: test_instruct.py
